test/trivial/bradc/defaultinit2.good
defaultinit2.chpl:1: syntax error: near 'mybool'
